--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,21 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+=== Merge Tags 1.3.0
+
+The {productname} 6.5 release includes an accompanying release of the **Merge Tags** premium plugin.
+
+**Merge Tags** 1.3.0 includes one fix:
+
+=== Right clicking on a merge tag would result in different highlighting across browsers.
+//#TINY-9848
+
+In previous versions of {productname}, an issue was identified when users right-clicked on a merge tag.
+
+The result of this action was that the highlights within the merge tag selection would vary based on the browser, leading to an inconsistent experience for users. To address this problem, {productname} 6.5 implemented a fix by removing the browser's default highlighting of the merge tag. Instead, {productname} introduced our own styles specifically designed to highlight the merge tag consistently across different browsers.
+
+As a result, users can now enjoy a uniform and improved merge tag selection experience across all browsers.
+
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
 
