DOC-2029: Added docs for editable_root and newdocument_content options

--- a/modules/ROOT/pages/content-behavior-options.adoc
+++ b/modules/ROOT/pages/content-behavior-options.adoc
@@ -4,6 +4,8 @@
 
 include::partial$configuration/custom_undo_redo_levels.adoc[]
 
+include::partial$configuration/editable_root.adoc[]
+
 include::partial$configuration/end_container_on_empty_block.adoc[]
 
 include::partial$configuration/draggable_modal.adoc[]
@@ -11,6 +13,8 @@ include::partial$configuration/draggable_modal.adoc[]
 include::partial$configuration/keep_styles.adoc[]
 
 include::partial$configuration/editable_class.adoc[]
+
+include::partial$configuration/newdocument_content.adoc[]
 
 include::partial$configuration/newline_behavior.adoc[]
 
