--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -36,14 +36,18 @@ The {productname} 6.5 release includes an accompanying release of the **Merge Ta
 
 **Merge Tags** 1.3.0 includes one fix:
 
-=== Right clicking on a merge tag would result in different highlighting across browsers.
+=== Right clicking on a merge tag instance presented different highlighting depending on the host browser.
 //#TINY-9848
 
-In previous versions of {productname}, an issue was identified when users right-clicked on a merge tag.
+In previous versions of {productname}, when users right-clicked on a merge tag, the highlighting within the merge tag selection varied, depending on the host browser.
 
-The result of this action was that the highlights within the merge tag selection would vary based on the browser, leading to an inconsistent experience for users. To address this problem, {productname} 6.5 implemented a fix by removing the browser's default highlighting of the merge tag. Instead, {productname} introduced our own styles specifically designed to highlight the merge tag consistently across different browsers.
+This resulted in an inconsistent end-user experience.
 
-As a result, users can now enjoy a uniform and improved merge tag selection experience across all browsers.
+{productname} 6.5 no longer uses a browser’s default highlighting of the merge tag. Instead, {productname} 6.5 introduces {productname}-specific styles. These styles highlight the merge tag consistently across different browsers.
+
+{productname} now presents end-users with uniform merge tag highlighting across all supported browsers.
+
+For information on the **Merge Tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
