--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -85,7 +85,7 @@ As a result, users can now undo the operation performed by pressing `command + z
 
 In previous versions of {productname} on Windows, when the `ctrl+delete` shortcut was used followed by the `undo` and `redo` operations, the caret would end up in an incorrect position.
 
-In {productname} 6.5, the issue has been resolved, resulting in the caret moves to the correct position.
+In {productname} 6.5, the issue has been resolved, resulting in the caret moving to the correct position.
 
 [[security-fixes]]
 == Security fixes
