--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -64,7 +64,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 In previous versions of {productname}, when a table was copied and pasted inside an existing table, the content of the copied table would fill the existing table instead of being pasted as a whole inside the table cell where the paste was performed. 
 
-To address this, a new option `table_merge_content_on_paste` has been introduced in {productname} 6.5, that gives users the ability to disable this merging behavior.
+To address this, a new option `table_merge_content_on_paste` has been introduced in {productname} 6.5, that when set to `false` disables this merging behavior.
 
 As a result, table content can now be pasted without merging, ensuring that the entire table is inserted into the desired table cell during the paste operation.
 
