--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -39,7 +39,7 @@ The {productname} 6.5 release includes an accompanying release of the **Advanced
 === New `advtemplate_templates` configuration option to define an immutable list of predefined templates.
 //#TINY-9755
 
-In {productname} 6.5, the New `advtemplate_templates` configuration option was introduced. This feature allows users to define an unchangeable list of predefined templates. It is designed for situations where the template list should remain static. Instead of setting up a persistent template store and configuring a complex plugin, users can simply specify a static list of templates that can be easily inserted using the Templates dialog. This option simplifies the process for scenarios where a fixed set of templates is required.
+In {productname} 6.5, the New `advtemplate_templates` configuration option was introduced. This feature allows users to define an unchangeable list of predefined templates. It is designed for situations where the template list should remain static. Instead of setting up a persistent template store and dealing with a lengthy plugin configuration, users can simply specify a static list of templates that can be easily inserted using the Templates dialog. This option simplifies the process for scenarios where a fixed set of templates is required.
 
 [NOTE]
 Read more about setup configuration for the `advtemplate_template` option xref:ROOT:advtemplate_templates.adoc[here]
