--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -36,16 +36,18 @@ The {productname} 6.5 release includes an accompanying release of the **Advanced
 
 **Advanced Templates** 1.2.0 includes one fix:
 
-=== The currently selected tree component template item would not stay highlighted after the Templates dialog redialing.
+=== A selected tree component template item did not stay highlighted when the Templates dialog re-rendered.
 //#TINY-9770
 
-In previous versions of {productname} a selected tree component template item would lose its highlight when the Advanced Template dialog was reopened.
+In previous versions of {productname}, a selected tree component template item would lose its highlight when the Advanced Template dialog was re-rendered after the template list updated.
 
-This would occur when a user renamed a selected template item in the tree component. As a consequence, the user was unable to identify the currently selected item in the tree.
+This occured when a user renamed a selected template item in the tree component. As a consequence, the user could not identify the currently selected item in the tree.
 
-In {productname} 6.5, the problem was addressed by utilizing the `defaultSelectedId` configuration property from the new tree component API.
+In {productname} 6.5, the problem was addressed by utilizing the new `defaultSelectedId` configuration property from the xref:dialog-components.adoc#tree[tree component] API.
 
-As a result, the previewed template now accurately reflects the selection in the tree component.
+As a result, the currently previewed template is now correctly highlighted in the tree component, as expected.
+
+For information on the **Advanced Templates** plugin, see: xref:advanced-templates.adoc[Advanced Templates].
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
