--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -37,13 +37,14 @@ The {productname} 6.5 release includes an accompanying release of the **Advanced
 
 **Advanced Templatess** 1.2.0 includes one improvement:
 
-=== The plugin's UI has been enhanced to provide controls only for a preconfigured set of operations.
+**Advanced Templatess** 1.2.0 includes one improvement:
+
+=== The Advanced Template UI now provides controls for a preconfigured operations set.
 //#TINY-9756
 
-The latest update to the Advanced Templates plugin introduces an enhanced user interface (UI) that offers controls exclusively tailored for a predefined range of operations. This upgrade streamlines the user experience by presenting only the necessary options relevant to the specific tasks at hand.
+This Advanced Templates plugin update introduces a user interface that offers controls tailored for a predefined range of operations. This simplifies the user experience by only presenting the options relevant to the tasks at hand.
 
-[NOTE]
-Read more about the enhanced user interface (UI) configuration for the `advtemplate_templates` option xref:ROOT:advtemplate_templates.adoc[here]
+For information on the **Advanced Templatess** plugin, see: xref:advanced-templates.adoc[Advanced Templates].
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
