DOC-203-: tinymcespellchecker-cmds.adoc
Expanded and corrected `mceSpellcheckUpdate` description.

--- a/modules/ROOT/partials/commands/tinymcespellchecker-cmds.adoc
+++ b/modules/ROOT/partials/commands/tinymcespellchecker-cmds.adoc
@@ -5,7 +5,7 @@
 |mceSpellcheckDisable |Turns spellchecking off.
 |mceSpellcheckDialog |Opens the spellchecking dialog.
 |mceSpellcheckDialogClose |Closes the spellchecking dialog.
-|mceSpellcheckUpdate |Checks the editor content for new misspellings and spelling suggestions.
+|mceSpellcheckUpdate |Checks the editor content for new misspellings, highlights them, and offers spelling suggestions.
 |===
 
 .Example
