--- a/modules/ROOT/partials/commands/tinymcespellchecker-cmds.adoc
+++ b/modules/ROOT/partials/commands/tinymcespellchecker-cmds.adoc
@@ -5,6 +5,8 @@
 |mceSpellcheckDisable |Turns spellchecking off.
 |mceSpellcheckDialog |Opens the spellchecking dialog.
 |mceSpellcheckDialogClose |Closes the spellchecking dialog.
+2+|
+include::partial$misc/admon-requires-6.5v.adoc[]
 |mceSpellcheckUpdate |Checks the editor content for new misspellings, highlights them, and offers spelling suggestions.
 |===
 
