--- a/modules/ROOT/partials/events/tinymcespellchecker-events.adoc
+++ b/modules/ROOT/partials/events/tinymcespellchecker-events.adoc
@@ -11,5 +11,5 @@ The following events are provided by the xref:introduction-to-tiny-spellchecker.
 |SpellcheckerLanguageChanged |`+{ language: string, prevLanguage: string }+` |Fired when the spellchecking language is changed.
 3+|
 include::partial$misc/admon-requires-6.5v.adoc[]
-|SpellcheckerUpdated |`+{ spelling: SpellingUpdate }+` |Fired when the editor content is checked for misspellings and suggestions.
+|SpellcheckerUpdated |`+{ spelling: SpellingUpdate }+` |Fired when the editor content is checked for misspellings, and includes suggestions within xref:introduction-to-tiny-spellchecker.adoc#spelling-object[the `+spelling+` object].
 |===
