--- a/modules/ROOT/pages/introduction-to-tiny-spellchecker.adoc
+++ b/modules/ROOT/pages/introduction-to-tiny-spellchecker.adoc
@@ -243,7 +243,14 @@ tinymce.init({
 [[spelling-object]]
 ==== The `spelling` object
 
-The `+spelling+` object, provided by the `+SpellcheckerUpdated+` event, contains the result of the spellcheck by the spelling service. The keys of the outermost object represent the language code for each language. Under each language code, there is an object with keys representing misspelled words and values that are arrays of possible correct spellings.
+The `+spelling+` object, which is provided by the `+SpellcheckerUpdated+` event, contains the result of the spelling service spellcheck.
+
+The keys of the outermost object are the language code for each checked language.
+
+Under each returned language code is an object with
+
+* keys representing misspelled words; and
+* arrays of values that are possible correct spellings.
 
 ===== Example: the `spelling` object
 
