DOC-2030: Improve description

--- a/modules/ROOT/pages/introduction-to-tiny-spellchecker.adoc
+++ b/modules/ROOT/pages/introduction-to-tiny-spellchecker.adoc
@@ -215,7 +215,7 @@ tinymce.init({
 
 include::partial$misc/admon-requires-6.5v.adoc[]
 
-This event is fired when the editor content is checked for misspellings and suggestions, either by opening the dialog or by executing the `+mceSpellcheckUpdate+` command.
+This event is fired when the editor content is checked for misspellings and suggestions, either by opening the Spell Checker Pro dialog, or by executing the `+mceSpellcheckUpdate+` command.
 
 NOTE: This event is not fired when SpellChecker Pro is operating in As-You-Type mode.
 
