--- a/modules/ROOT/partials/commands/tinymcespellchecker-cmds.adoc
+++ b/modules/ROOT/partials/commands/tinymcespellchecker-cmds.adoc
@@ -5,6 +5,9 @@
 |mceSpellcheckDisable |Turns spellchecking off.
 |mceSpellcheckDialog |Opens the spellchecking dialog.
 |mceSpellcheckDialogClose |Closes the spellchecking dialog.
+2+|
+include::partial$misc/admon-requires-6.5v.adoc[]
+|mceSpellcheckUpdate |Checks the editor content for new misspellings, highlights them, and offers spelling suggestions.
 |===
 
 .Example
@@ -14,4 +17,5 @@ tinymce.activeEditor.execCommand('mceSpellcheckEnable');
 tinymce.activeEditor.execCommand('mceSpellcheckDisable');
 tinymce.activeEditor.execCommand('mceSpellcheckDialog');
 tinymce.activeEditor.execCommand('mceSpellcheckDialogClose');
+tinymce.activeEditor.execCommand('mceSpellcheckUpdate');
 ----
