--- a/modules/ROOT/partials/configuration/language.adoc
+++ b/modules/ROOT/partials/configuration/language.adoc
@@ -15,7 +15,7 @@ For information on:
 
 *Type:* `+String+`
 
-*Default value:* `+'en_US'+`
+*Default value:* `+'en'+`
 
 === Example: using `+language+`
 
