--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -33,9 +33,9 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Exposed `dataTransfer` property of drag and drop events for elements with a `contenteditable="false"` attribute.
 
 === Changed
-* The `caption`, `address` and `dt` elements were allowed to have non-inline children elements when the editor schema was set to `html4`.
-* SVG icons for back and foreground colors now uses class instead of id to identify SVG elements that should change color.
-* The `a` elements were allowed to have non-inline child elements when the editor schema was set to `html4`.
+* The `caption`, `address` and `dt` elements no longer incorrectly allow non-inline child elements when the editor schema is set to _HTML 4_.
+* SVG icons for back and foreground colors now use `class` instead of `id` to identify SVG elements that should change color.
+* Anchor tag elements — `<a>` — no longer incorrectly allow non-inline child elements when the editor schema is set to _HTML 4_.
 
 === Fixed
 * Right-clicking on a merge tag instance presented different highlighting depending on the host browser.
