DOC-2051: changelog.adoc
Added missing entry — regarding adding translations of re-written Help text — to Improved section of 6.5-specific changes.

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -27,6 +27,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 * Toolbar buttons and menu items were not disabled when they couldn't be used on noneditable content.
 * Updated toolbar "More" button tooltip text from "More..." to "Reveal or hide additional toolbar items".
 * Help text displayed at *Help -> Help -> Keyboard Navigation* re-written.
+* Translations added for Help text displayed at *Help > Help > Keyboard Navigation*.
 * For word count purposes these characters are now considered punctuation marks: *$*, *~*, *+*, *|*, *№*, and *`*. They no longer increase a document’s word count.
 * Updated the `codesample` plugin dialog and the `template` plugin dialog to use the `listbox` component to match other dialogs.
 * If the selection contains more than one table cell, Quickbar toolbars are now positioned in the middle of the selection horizontally.
