--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -7,9 +7,11 @@ NOTE: This is the {productname} Community version changelog. For information abo
 == 6.5 - 2023-06-01
 
 === Added
+* Support for `h` hash parameter in vimeo video url in the Media plugin.
 * New `table_merge_content_on_paste` option which disables the merging behaviour when pasting a table inside an existing table.
 * New optional `defaultExpandedIds` and `onToggleExpand` options to the `tree` component config.
 * New optional `defaultSelectedId` option to the `tree` component config.
+* New `help_accessibility` option which displays the keyboard shortcut to access the help functionality in the statusbar.
 * New `accordion` plugin with the `InsertAccordion` command.
 * New `accordion` and `accordion-toggle` icons.
 * New `details_initial_state` and `details_serialized_state` options.
